[gd_scene load_steps=8 format=3 uid="uid://y00qqaj737nv"]

[ext_resource type="Script" uid="uid://dyrbm8k303i71" path="res://hazards/sun_lance/sun_lance_attack.gd" id="1_o1883"]
[ext_resource type="Script" uid="uid://5t1f8d7k7bp6" path="res://states/state_machine.gd" id="2_vsehh"]
[ext_resource type="Script" uid="uid://im6yfos5snje" path="res://hazards/sun_lance/states/warning.gd" id="3_wilqm"]
[ext_resource type="Script" uid="uid://x0gqua8isgdn" path="res://hazards/sun_lance/states/firing.gd" id="4_os7v8"]
[ext_resource type="Script" uid="uid://cv1ck1qa6bu1a" path="res://hazards/sun_lance/states/fired.gd" id="5_ktnvf"]
[ext_resource type="Texture2D" uid="uid://dvm4s34w4nxr5" path="res://assets/sun_lance_warning.png" id="6_ktnvf"]
[ext_resource type="Texture2D" uid="uid://doahrynyvesg2" path="res://assets/sun_lance_warning_locked.png" id="7_sd48h"]

[node name="SunLanceAttack" type="Node2D"]
script = ExtResource("1_o1883")
tracking_speed = 3.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_vsehh")
initial_state = NodePath("Warning")
metadata/_custom_type_script = "uid://5t1f8d7k7bp6"

[node name="Warning" type="Node" parent="StateMachine"]
script = ExtResource("3_wilqm")
metadata/_custom_type_script = "uid://q1a4pqy6cj6y"

[node name="Firing" type="Node" parent="StateMachine"]
script = ExtResource("4_os7v8")
metadata/_custom_type_script = "uid://q1a4pqy6cj6y"

[node name="Fired" type="Node" parent="StateMachine"]
script = ExtResource("5_ktnvf")
metadata/_custom_type_script = "uid://q1a4pqy6cj6y"

[node name="Warning" type="Node2D" parent="."]

[node name="TrackingWarningSprite" type="Sprite2D" parent="Warning"]
texture = ExtResource("6_ktnvf")

[node name="LockedWarningSprite" type="Sprite2D" parent="Warning"]
visible = false
texture = ExtResource("7_sd48h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Warning"]
